--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,12 @@
-Info PWA & ikon
+{
+  "name": "Prompt Generator Offline",
+  "short_name": "PromptGen",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#0f172a",
+  "theme_color": "#38bdf8",
+  "icons": [
+    {"src": "icon-192.png","sizes": "192x192","type": "image/png"},
+    {"src": "icon-512.png","sizes": "512x512","type": "image/png"}
+  ]
+}
