--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,4 @@
+
 {
   "name": "Prompt Generator Offline",
   "short_name": "PromptGen",
@@ -6,7 +7,10 @@
   "background_color": "#0f172a",
   "theme_color": "#38bdf8",
   "icons": [
-    {"src": "icon-192.png","sizes": "192x192","type": "image/png"},
-    {"src": "icon-512.png","sizes": "512x512","type": "image/png"}
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
   ]
 }
